Fixed errors in clinic flow

--- a/resources/template.yaml
+++ b/resources/template.yaml
@@ -282,7 +282,7 @@ oh_sh:
       text: 'Spouse or partner name:'
       input: text
     -
-      text: 'Family memebers in the household:'
+      text: 'Family members in the household:'
       input: text
     -
       text: 'Children:'
